<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rg_tab_container1"
    android:layout_width="match_parent"
    android:layout_height="49dp"
    android:background="@color/white"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/rb_home"
        style="@style/mall_HomeTabStyle"
        android:drawableTop="@drawable/tab_main_selector"
        android:ellipsize="end"
        android:maxLines="1"
        android:clickable="true"
        android:text="@string/study_home_page"
        android:textColor="@color/core_color_cc000"
        android:textSize="12sp" />


    <TextView
        android:id="@+id/rb_route"
        style="@style/mall_HomeTabStyle"
        android:drawableTop="@drawable/tab_route_selector"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/study_home_route"
        android:clickable="true"
        android:textColor="@color/core_color_cc000"
        android:textSize="12sp" />

    <RelativeLayout
        android:id="@+id/rl_dynamic"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:clickable="true"
        android:layout_weight="1">

        <TextView
            android:id="@+id/rb_dynamic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@null"
            android:button="@null"
            android:drawableTop="@drawable/tab_dynamic_selector"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/study_home_dynamic"
            android:textColor="@color/core_color_cc000"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_tab_dynamic_num"
            style="@style/redMarkStyle"
            android:layout_alignTop="@+id/rb_dynamic"
            android:layout_marginTop="-5dp"
            android:layout_toRightOf="@+id/rb_dynamic"
            android:text="99"
            android:visibility="visible" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_message"
        android:layout_width="0dp"
        android:clickable="true"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TextView
            android:id="@+id/rb_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@null"
            android:button="@null"
            android:drawableTop="@drawable/tab_message_selector"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/study_home_message"
            android:textColor="@color/core_color_cc000"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_tab_chat_num"
            style="@style/redMarkStyle"
            android:layout_alignTop="@+id/rb_message"
            android:layout_marginTop="-5dp"
            android:layout_toRightOf="@+id/rb_message"
            android:text="99"
            android:visibility="visible" />
    </RelativeLayout>

    <TextView
        android:id="@+id/rb_self"
        style="@style/mall_HomeTabStyle"
        android:drawableTop="@drawable/tab_self_selector"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/study_home_self"
        android:clickable="true"
        android:textColor="@color/core_color_cc000"
        android:textSize="12sp" />

</LinearLayout>