<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="113dp"
        android:layout_height="43dp"
        android:layout_marginRight="10dp"
        android:background="@mipmap/bg_dynamic">
        <LinearLayout
            android:id="@+id/ll_dymanic"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="11dp"
            android:orientation="horizontal"
            android:gravity="center"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/dynamic"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color33"
                android:textSize="14sp"
                android:text="@string/relase_dynamic"
                android:layout_marginLeft="8dp"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_route"
        android:layout_width="113dp"
        android:layout_height="32dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@drawable/home_dialog_white_bg"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/travels"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color33"
            android:textSize="14sp"
            android:text="@string/relase_route"
            android:layout_marginLeft="8dp"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_guide"
        android:layout_width="113dp"
        android:layout_height="32dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@drawable/home_dialog_white_bg"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/guide"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color33"
            android:textSize="14sp"
            android:text="@string/recruiting_tutors"
            android:layout_marginLeft="8dp"
            />
    </LinearLayout>

</LinearLayout>